<resources>
    <string name="google_place_api">AIzaSyBtWGYw6U5VzpZNPqDYNmuh2mQsKs3C8KQ</string>
    <string-array name="EditProfile">
        <item>Select</item>
        <item>Text</item>
        <item>Text1</item>
        <item>Text2</item>
    </string-array>
    <string-array name="Months">
        <item>Months</item>
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string-array name="Lang">
        <item>EN</item>
        <item>BN</item>

    </string-array>
    <string-array name="LangOne">

        <item>বাংলা</item>
        <item>English</item>
    </string-array>
    <string name="app_name">Intercom</string>
    <string name="enable_gps">Enable Gps</string>
    <string-array name="location">
        <item>Dhaka</item>
    </string-array>
    <string name="tv_forgot_desc">Enter your phone and we will\nsend you otp</string>
    <string name="tv_reset_password">Enter your new password to \nreset</string>
    <string name="tv_your_password_changed_successfully">Your password has been \nchanged successfully!</string>
    <string name="tv_register_member">You are not register as a \nMember</string>
    <string name="tv_register_member_note">Note - If you want to become a \nmember than you contact us</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tv_property_name">Modern house with European \nbuilding style</string>
    <string name="tv_property_details">Property \nDetails</string>
    <string name="tv_activate_subscription">Enter your coupon code to \nactivate your subscription</string>
    <string name="tv_profile_details">Enter your details to complete \nyour profile</string>
    <string name="tv_contact_details">Do you want to Contact Intercom \nCustomer Service by Calling unified \ncenter or through conversation.</string>
    <string name="reliably_explore_parkings">Reliably Explore</string>
    <string name="save">Save</string>
    <string name="choose_flat_unit_to_visit">Choose Flat/Unit to visit</string>
    <string name="visitor_s_name">Visitor’s name</string>
    <string name="enter_visitor_s_name">Enter Visitor’s name</string>
    <string name="visitor_s_phone_number">Visitor’s Phone Number</string>
    <string name="visitor_address">Visitor’s Address</string>
    <string name="enter_visitor_s_address">Enter Visitor’s Address</string>
    <string name="number_of_visitors">Number of Visitors</string>
    <string name="enter_number_of_visitors">Enter Number of Visitors</string>
    <string name="relationship_with_you">Relationship with you</string>
    <string name="upload_image">Upload Photo</string>
    <string name="visitor_name">Visitor Name</string>
    <string name="visitor_phone_number">Visitor Phone number</string>
    <string name="_03">03</string>
    <string name="family">Family</string>
    <string name="entry_date_amp_time"><![CDATA[Entry Date & Time]]></string>
    <string name="_03_05_2023_05_00_pm">03/05/2023 ; 05:00 pm</string>
    <string name="visitation_address">Visitation Address</string>
    <string name="flat_number_tf_244_yashoda">Flat Number- TF-244, Yashoda ....</string>
    <string name="visitation_phone_number">Visitation Phone Number</string>
    <string name="_889956178900">+889956178900</string>
    <string name="recently_searched">Recently Searched</string>
    <string name="view_all">View all</string>
    <string name="list_of_services">List of Services</string>
    <string name="cleaning">Cleaning</string>
    <string name="sort_by_price_high_to">Sort by Price: High to Low</string>
    <string name="service_provider_charge">৳%1$s</string>
    <string name="starting_from">Starting From</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="home">Home</string>
    <string name="my_profile">My Profile</string>
    <string name="name">Name</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="email">Email</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="write_some_text_here">Write some text here..</string>
    <string name="push_notifications">Push notifications</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="change_password">Change Password</string>
    <string name="logout">Logout</string>
    <string name="ralph_edwards">Ralph Edwards</string>
    <string name="recent_password">Old Password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="password">New Password</string>
    <string name="confirm_password">Enter confirm Password</string>
    <string name="comfirm_password">Comfirm password</string>
    <string name="submit">Submit</string>
    <string name="notice_board">Notice Board</string>
    <string name="electricity_bill_issue">Electricity Bill Issue</string>
    <string name="filter">Filter</string>
    <string name="unpaid">Unpaid</string>
    <string name="electricity_bill">Electricity bill</string>
    <string name="due_date_5_jan_2021">Due Date: 5 Jan, 2021</string>
    <string name="pay_now">Pay Now</string>
    <string name="my_billings">My Billings</string>
    <string name="pay_in_advance">Pay in Advance</string>
    <string name="guest">Guest</string>
    <string name="company_address">Company Address</string>
    <string name="delivery_company">Delivery Company</string>
    <string name="enter_delivery_company">Enter Delivery Company</string>
    <string name="kavita">Savita</string>
    <string name="friend">Friend</string>
    <string name="activity_name">Activity Name</string>
    <string name="write_description">Write Description</string>
    <string name="notification_sent">Notification Sent ..</string>
    <string name="waiting_for_confirmation">Waiting for confirmation</string>
    <string name="declined_entry">Declined Entry</string>
    <string name="your_entry_is_declined_by_owner">Your entry is declined by owner</string>
    <string name="allowed">Allowed</string>
    <string name="lets_guests_enter_the_society">Lets Guests Enter the Society</string>
    <string name="view_pass">View Pass</string>
    <string name="flat_no_a_121_3rd_floor">Flat no - A-121 , 3rd floor</string>
    <string name="_12_03_2022">12/03/2022</string>
    <string name="_12_00_pm">12:00 pm</string>
    <string name="gate_pass">Gate Pass</string>
    <string name="on_duty">On Duty</string>
    <string name="tenant">Tenant</string>
    <string name="comments">Comments</string>
    <string name="_4_hours_ago">4 hours ago</string>
    <string name="like">Like</string>
    <string name="reply">Reply</string>
    <string name="_5_jan_2021">5 Jan, 2021</string>
    <string name="write_a_post">Write a post ...</string>
    <string name="photo_video">Photo</string>
    <string name="today">Today</string>
    <string name="_02_visitors">02 Visitors</string>
    <string name="tv_list_to_let">List of To-Let in \nYasodha Residency</string>
    <string name="tv_complaint_id">Do you want to mark \n‘Complain ID-23663’ \nas resolved</string>
    <string name="select_flat">Select Flat</string>
    <string-array name="serviceCharges">
        <item>Service Charges</item>
        <item>Monthly</item>
        <item>Yearly</item>
    </string-array>
    <string name="select_date">Select Date</string>
    <string-array name="min_rent">
        <item>Min</item>
        <item>100</item>
        <item>200</item>
        <item>300</item>
        <item>400</item>
        <item>500</item>
        <item>600</item>
        <item>700</item>
        <item>800</item>
        <item>900</item>
        <item>1000</item>
        <item>1100</item>
        <item>1200</item>

    </string-array>
    <string-array name="month">
        <item>January</item>
    </string-array>
    <string-array name="max_rent">
        <item>Max</item>
        <item>100</item>
        <item>200</item>
        <item>300</item>
        <item>400</item>
        <item>500</item>
        <item>600</item>
        <item>700</item>
        <item>800</item>
        <item>900</item>
        <item>1000</item>
        <item>1100</item>
        <item>1200</item>
    </string-array>
    <string name="select_category">Select Category</string>
    <string-array name="select_billing_holder_name">
        <item>Java</item>
        <item>Kotlin</item>
        <item>Swift</item>
        <item>Python</item>
        <item>Scala</item>
        <item>Perl</item>
        <item>Select Flat</item>
        <item>Select Category</item>
        <item>Select  Billing Holder Name</item>
    </string-array>
    <string name="title_activity_unpaid_bills">UnpaidBillsActivity</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="delivery_02_visitors">Delivery   02 Visitors</string>
    <string name="visitors">Visitors</string>
    <string name="unpaid_bills">Unpaid Bills</string>
    <string name="my_properties">My Properties</string>
    <string name="close">Close</string>
    <string name="help_and_support">Help &amp; Support</string>
    <string name="view_complain_history">View Complain history</string>
    <string name="write_complain_name">Write complain Name</string>
    <string name="service_category">Write Service Category</string>
    <string name="upload_photo_video">Upload Photo</string>
    <string name="parapets_play_a_vital_role_in_the_design_of_a_house_before_we_move_on_examining_the_various_house_parapet_designs_that_can_ideal_for_your_home_read_more">Parapets play a vital role in the design of a house. Before we move on examining the various house parapet designs that can ideal for your home.<font color="#000000">Read more</font></string>
    <string name="view_details">View Details</string>
    <string name="choose_your_flat">Choose your flat</string>
    <string name="owner">Owner</string>
    <string name="category">Category</string>
    <string name="rented">Rented</string>
    <string name="pending">Pending</string>
    <string name="confirm">Confirm</string>
    <string name="description_amet_minim_mollit_non_deserunt_ullamco_est_sit_aliqua_dolor_do_amet_sint_velit_officia_consequat_duis_enim_velit_mollit">Description - Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit</string>
    <string name="date_26_03_2023">Date :</string>
    <string name="payment_options">Payment Options</string>
    <string name="mfs">MFS</string>
    <string name="electricians">Electricians</string>
    <string name="details">Details</string>
    <string name="enter_your_mobile_number">Enter your mobile number</string>
    <string name="rent">Rent</string>
    <string name="filter_by">Filter By</string>
    <string name="type">Type</string>
    <string name="service_charge">Service Charges</string>
    <string name="select_months">Select Months</string>
    <string name="bkash_nagad">Bkash/Nagad</string>
    <string name="bank_payment">Bank Payment</string>
    <string name="pay_on_bank_payment">pay on Bank Payment</string>
    <string name="cash">Cash</string>
    <string name="pay_on_cash">pay on Cash</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="enter_what_you_want_to_know">Enter what you want to know</string>
</resources>