<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".user.contact.ContactUsActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/common_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_contact_us"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:fontFamily="@font/bold"
        android:text="Contact Us"
        android:visibility="gone"
        android:textColor="#232323"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />


    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/semi_bold"
        android:text="@string/name"
        android:textColor="#20222C"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <EditText
        android:id="@+id/edt_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_4sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:background="@drawable/bg_edit_text"
        android:ems="10"
        android:hint="@string/enter_your_name"
        android:inputType="text"
        android:minHeight="@dimen/_40sdp"
        android:paddingStart="@dimen/_8sdp"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_name" />

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:fontFamily="@font/semi_bold"
        android:text="@string/email"
        android:textColor="#20222C"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_name" />

    <EditText
        android:id="@+id/edt_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_4sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:background="@drawable/bg_edit_text"
        android:ems="10"
        android:hint="@string/enter_your_email"
        android:inputType="textEmailAddress"
        android:minHeight="@dimen/_40sdp"
        android:paddingStart="@dimen/_8sdp"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_email"
        app:layout_constraintTop_toBottomOf="@+id/tv_email" />

    <TextView
        android:id="@+id/tv_mobile_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:fontFamily="@font/semi_bold"
        android:text="@string/mobile_number"
        android:textColor="#20222C"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_email" />

    <EditText
        android:id="@+id/edt_mobile_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_4sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:background="@drawable/bg_edit_text"
        android:ems="10"
        android:hint="@string/enter_your_mobile_number"
        android:inputType="number"
        android:minHeight="@dimen/_40sdp"
        android:paddingStart="@dimen/_8sdp"
        android:textSize="@dimen/_12ssp"
        android:maxLength="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_mobile_number"
        app:layout_constraintTop_toBottomOf="@+id/tv_mobile_number" />


    <TextView
        android:id="@+id/tv_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:fontFamily="@font/semi_bold"
        android:text="@string/details"
        android:textColor="#20222C"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_mobile_number" />

    <EditText
        android:id="@+id/edt_details"
        android:layout_width="0dp"
        android:layout_height="@dimen/_100sdp"
        android:layout_marginTop="@dimen/_4sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:background="@drawable/bg_edit_text"
        android:gravity="start"
        android:hint="@string/enter_what_you_want_to_know"
        android:inputType="textMultiLine"
        android:minHeight="@dimen/_40sdp"
        android:paddingStart="@dimen/_16sdp"
        android:paddingTop="@dimen/_16sdp"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_details"
        app:layout_constraintTop_toBottomOf="@+id/tv_details" />

    <include
        android:id="@+id/btn_submit"
        layout="@layout/common_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_32sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/edt_details"
        app:layout_constraintStart_toStartOf="@+id/edt_details" />

</androidx.constraintlayout.widget.ConstraintLayout>