<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".tenant.activity.payment.TenantPaymentActivity">

    <include
        android:id="@+id/paymentToolbar"
        layout="@layout/common_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView107"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_24sdp"
        style="@style/normaltxt_16sp_Semibold"
        android:text="@string/payment_options"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/paymentToolbar" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_16sdp"
        app:cardCornerRadius="@dimen/_12sdp"
        app:cardElevation="@dimen/_4sdp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView107">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView58"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_4sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/pay_1" />

            <TextView
                android:id="@+id/textView108"
                style="@style/normaltxt_15sp_Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/mfs"
                app:layout_constraintStart_toEndOf="@+id/imageView58"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView109"
                style="@style/normaltxt_13sp_Regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bkash_nagad"
                android:textColor="#A8A8A8"
                app:layout_constraintStart_toStartOf="@+id/textView108"
                app:layout_constraintTop_toBottomOf="@+id/textView108" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView11"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_16sdp"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="@dimen/_12sdp"
        app:cardElevation="@dimen/_4sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView10">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView581"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_4sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/pay_2" />

            <TextView
                android:id="@+id/textView1081"
                style="@style/normaltxt_15sp_Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/bank_payment"
                app:layout_constraintStart_toEndOf="@+id/imageView581"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView1091"
                style="@style/normaltxt_13sp_Regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pay_on_bank_payment"
                android:textColor="#A8A8A8"
                app:layout_constraintStart_toStartOf="@+id/textView1081"
                app:layout_constraintTop_toBottomOf="@+id/textView1081" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="@dimen/_12sdp"
        app:cardElevation="@dimen/_4sdp"
        app:layout_constraintEnd_toEndOf="@+id/cardView11"
        app:layout_constraintStart_toStartOf="@+id/cardView11"
        app:layout_constraintTop_toBottomOf="@+id/cardView11">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView5811"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_4sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/pay_3" />

            <TextView
                android:id="@+id/textView10811"
                style="@style/normaltxt_15sp_Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/cash"
                app:layout_constraintStart_toEndOf="@+id/imageView5811"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView10911"
                style="@style/normaltxt_13sp_Regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pay_on_cash"
                android:textColor="#A8A8A8"
                app:layout_constraintStart_toStartOf="@+id/textView10811"
                app:layout_constraintTop_toBottomOf="@+id/textView10811" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>